# napalm-h3c

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
napalm_h3c_comware/: __init__.py  comware.py  types.py
napalm_h3c_comware/utils/: helpers.py
napalm_h3c_comware/utils/textfsm_templates/: display_arp.tpl  display_cpu-usage_summary.tpl  display_current-configuration_configuration_irf-port.tpl  display_device_manuinfo.tpl  display_dns_host.tpl  display_environment.tpl  display_fan.tpl  display_interface.tpl  display_ip_interface.tpl  display_lldp_neighbor-information_verbose.tpl  display_mac-address_mac-move.tpl  display_memory.tpl  display_power.tpl  display_version.tpl  display_vlan_all.tpl
tests/: conftest.py  test_display_memory.py  test_get_interfaces_ip.py  test_lldp_parser.py  test_parse_time.py
