[project]
name = "napalm-h3c"
version = "0.1.0"
description = ""
authors = [
    {name = "Kai Yang",email = "kaiyang939325@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "napalm (==5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "napalm_h3c_comware" }
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
mypy = "^1.16.1"
